--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link href="assets/main.css" rel="stylesheet" type="text/css" />
+<head>
+    <link href="assets/main.css" rel="stylesheet" type="text/css"/>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
-  </head>
-  <body>
-    <header>
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
-        <h1>Nos photographes</h1>
-    </header>
-    <main id="main">
-        <div class="photographer_section"></div>
-    </main>
-    <script src="scripts/templates/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
-  </body>
+</head>
+<body>
+<header role="banner">
+    <a href="index.html" aria-label="Go to the homepage">
+        <img src="assets/images/logo.png" class="logo" alt="FishEye logo"/>
+    </a>
+    <h1>Nos photographes</h1>
+</header>
+<main id="main">
+    <div class="photographer_section"></div>
+</main>
+<script src="scripts/models/Photographer.js"></script>
+<script src="scripts/templates/photographer.js"></script>
+<script src="scripts/utils/photographer.js"></script>
+<script src="scripts/pages/index.js"></script>
+</body>
 </html>
