--- a/photographer.html
+++ b/photographer.html
@@ -62,6 +62,27 @@
         </form>
     </div>
 </div>
+<div id="lightbox" aria-hidden="true" class="carousel" aria-label="Image closeup view">
+    <h2 id="carouselTitle" class="visually-hidden">Lightbox</h2>
+    <button class="carousel__controls carousel__controls-left" aria-label="Previous">
+        <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <ul class="carousel__content" aria-label="Photos and videos">
+        <li class="carousel__item">
+            <img src="assets/photographers/id/RhodeDubois.jpg" alt=""/>
+            <h3>Rhode Dubois</h3>
+        </li>
+    </ul>
+    <button class="carousel__controls carousel__controls-right" aria-label="Next">
+        <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
+        <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel__close-btn" id="closeCarouselBtn" aria-label="Close">
+        <i class="fa-solid fa-xmark" aria-hidden="true"></i>
+        <span class="visually-hidden">Close</span>
+    </button>
+</div>
 <script src="https://kit.fontawesome.com/e33ac83f27.js" crossorigin="anonymous"></script>
 <script src="scripts/factories/MediaFactory.js"></script>
 <script src="scripts/models/Media.js"></script>
@@ -70,5 +91,6 @@
 <script src="scripts/utils/photographer.js"></script>
 <script src="/scripts/pages/photographer.js"></script>
 <script src="/scripts/utils/contactForm.js"></script>
+<script src="/scripts/utils/carousel.js"></script>
 </body>
 </html>
