added like feature

--- a/photographer.html
+++ b/photographer.html
@@ -62,7 +62,7 @@
         </form>
     </div>
 </div>
-<div id="lightbox" aria-hidden="true" class="carousel" aria-label="Image closeup view">
+<div id="lightbox" aria-hidden="true" class="carousel" role="dialog" aria-label="Image closeup view">
     <h2 id="carouselTitle" class="visually-hidden">Lightbox</h2>
     <button class="carousel__controls carousel__controls-left" aria-label="Previous">
         <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
