--- a/photographer.html
+++ b/photographer.html
@@ -27,12 +27,23 @@
     </header>
     <section>
         <header class="media-filter">
-            <label for="mediaFilter">Trier par</label>
-            <select name="mediaFilter" id="mediaFilter">
-                <option value="popularity">Popularité</option>
-                <option value="date">Date</option>
-                <option value="title">Title</option>
-            </select>
+<!--            <label for="mediaFilter">Trier par</label>-->
+<!--            <div class="fe-select">-->
+<!--                <select name="mediaFilter" id="mediaFilter">-->
+<!--                    <option value="popularity" selected>Popularité</option>-->
+<!--                    <option value="date">Date</option>-->
+<!--                    <option value="title">Title</option>-->
+<!--                </select>-->
+<!--            </div>-->
+                <p id="mediaFilterLabel">Trier par</p>
+                <div class="listbox">
+                    <div class="listbox__selected" role="button" aria-haspopup="listbox" aria-expanded="false">Popularité</div>
+                    <ul class="listbox__options" role="listbox" aria-activedescendant="popularityFilter" aria-labelledby="mediaFilterLabel">
+                        <li class="listbox__option" role="option" aria-selected="true" id="popularityFilter" data-value="popularity">Popularité</li>
+                        <li class="listbox__option" role="option" aria-selected="false" id="dateFilter" data-value="date">Date</li>
+                        <li class="listbox__option" role="option" aria-selected="false" id="titleFilter" data-value="title">Title</li>
+                    </ul>
+                </div>
         </header>
         <div class="media-section"></div>
     </section>
@@ -88,5 +99,6 @@
 <script src="/scripts/pages/photographer.js"></script>
 <script src="/scripts/utils/contactForm.js"></script>
 <script src="/scripts/utils/carousel.js"></script>
+<script src="/scripts/utils/listbox.js"></script>
 </body>
 </html>
