--- a/photographer.html
+++ b/photographer.html
@@ -37,11 +37,11 @@
 <!--            </div>-->
                 <p id="mediaFilterLabel">Trier par</p>
                 <div class="listbox">
-                    <div class="listbox__selected" role="button" aria-haspopup="listbox" aria-expanded="false">Popularité</div>
+                    <div class="listbox__selected" tabindex="0" role="button" aria-haspopup="listbox" aria-expanded="false">Popularité</div>
                     <ul class="listbox__options" role="listbox" aria-activedescendant="popularityFilter" aria-labelledby="mediaFilterLabel">
-                        <li class="listbox__option" role="option" aria-selected="true" id="popularityFilter" data-value="popularity">Popularité</li>
-                        <li class="listbox__option" role="option" aria-selected="false" id="dateFilter" data-value="date">Date</li>
-                        <li class="listbox__option" role="option" aria-selected="false" id="titleFilter" data-value="title">Title</li>
+                        <li class="listbox__option" tabindex="0" role="option" aria-selected="true" id="popularityFilter" data-value="popularity">Popularité</li>
+                        <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="dateFilter" data-value="date">Date</li>
+                        <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="titleFilter" data-value="title">Title</li>
                     </ul>
                 </div>
         </header>
