--- a/photographer.html
+++ b/photographer.html
@@ -96,9 +96,9 @@
 <script src="scripts/templates/media.js"></script>
 <script src="scripts/models/Photographer.js"></script>
 <script src="scripts/utils/photographer.js"></script>
-<script src="/scripts/pages/photographer.js"></script>
-<script src="/scripts/utils/contactForm.js"></script>
-<script src="/scripts/utils/carousel.js"></script>
-<script src="/scripts/utils/listbox.js"></script>
+<script src="scripts/pages/photographer.js"></script>
+<script src="scripts/utils/contactForm.js"></script>
+<script src="scripts/utils/carousel.js"></script>
+<script src="scripts/utils/listbox.js"></script>
 </body>
 </html>
