fixed a few accessibility issues

--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <link href="assets/main.css" rel="stylesheet" type="text/css"/>
     <meta charset="utf-8">
@@ -57,7 +57,7 @@
         <header class="modal__header">
             <h2 id="modalTitle">Contactez-moi</h2>
             <button id="closeModalBtn" onclick="closeModal()" aria-label="Close Contact form">
-                <img src="assets/icons/close.svg"/>
+                <img src="assets/icons/close.svg" alt="Close" />
             </button>
         </header>
         <form method="post" name="contact" id="contactForm" class="modal__body">
