--- a/photographer.html
+++ b/photographer.html
@@ -20,30 +20,31 @@
             <p class="photograph-header__location">London, UK</p>
             <p class="photograph-header__tagline">27 years old | Fashion, Animals, Events</p>
         </div>
-        <button id="openModalBtn" class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        <button id="openModalBtn" class="contact_button" onclick="toggleModal(true)">Contactez-moi</button>
         <div class="photograph-header__portrait">
             <img src="assets/photographers/Id/MimiKeel.jpg" alt=""/>
         </div>
     </header>
     <section>
         <header class="media-filter">
-<!--            <label for="mediaFilter">Trier par</label>-->
-<!--            <div class="fe-select">-->
-<!--                <select name="mediaFilter" id="mediaFilter">-->
-<!--                    <option value="popularity" selected>Popularité</option>-->
-<!--                    <option value="date">Date</option>-->
-<!--                    <option value="title">Title</option>-->
-<!--                </select>-->
-<!--            </div>-->
-                <p id="mediaFilterLabel">Trier par</p>
-                <div class="listbox">
-                    <div class="listbox__selected" tabindex="0" role="button" aria-haspopup="listbox" aria-expanded="false">Popularité</div>
-                    <ul class="listbox__options" role="listbox" aria-activedescendant="popularityFilter" aria-labelledby="mediaFilterLabel">
-                        <li class="listbox__option" tabindex="0" role="option" aria-selected="true" id="popularityFilter" data-value="popularity">Popularité</li>
-                        <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="dateFilter" data-value="date">Date</li>
-                        <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="titleFilter" data-value="title">Title</li>
-                    </ul>
+            <p id="mediaFilterLabel">Trier par</p>
+            <div class="listbox">
+                <div class="listbox__selected" tabindex="0" role="button" aria-haspopup="listbox" aria-expanded="false">
+                    Popularité
                 </div>
+                <ul class="listbox__options" role="listbox" aria-activedescendant="popularityFilter"
+                    aria-labelledby="mediaFilterLabel">
+                    <li class="listbox__option" tabindex="0" role="option" aria-selected="true" id="popularityFilter"
+                        data-value="popularity">Popularité
+                    </li>
+                    <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="dateFilter"
+                        data-value="date">Date
+                    </li>
+                    <li class="listbox__option" tabindex="0" role="option" aria-selected="false" id="titleFilter"
+                        data-value="title">Title
+                    </li>
+                </ul>
+            </div>
         </header>
         <div class="media-section"></div>
     </section>
@@ -56,8 +57,8 @@
     <div class="modal">
         <header class="modal__header">
             <h2 id="modalTitle">Contactez-moi</h2>
-            <button id="closeModalBtn" onclick="closeModal()" aria-label="Close Contact form">
-                <img src="assets/icons/close.svg" alt="Close" />
+            <button id="closeModalBtn" onclick="toggleModal()" aria-label="Close Contact form">
+                <img src="assets/icons/close.svg" alt="Close"/>
             </button>
         </header>
         <form method="post" name="contact" id="contactForm" class="modal__body">
