removed a html placeholder

--- a/photographer.html
+++ b/photographer.html
@@ -16,13 +16,13 @@
 <main id="main" aria-hidden="false">
     <header class="photograph-header">
         <div class="photograph-header__info">
-            <h1 class="photograph-header__name">Mimi Keel</h1>
-            <p class="photograph-header__location">London, UK</p>
-            <p class="photograph-header__tagline">27 years old | Fashion, Animals, Events</p>
+            <h1 class="photograph-header__name"></h1>
+            <p class="photograph-header__location"></p>
+            <p class="photograph-header__tagline"></p>
         </div>
         <button id="openModalBtn" class="contact_button" onclick="toggleModal(true)">Contactez-moi</button>
         <div class="photograph-header__portrait">
-            <img src="assets/photographers/Id/MimiKeel.jpg" alt=""/>
+            <img src="" alt=""/>
         </div>
     </header>
     <section>
